<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registered">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background_signin">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:layout_above="@+id/name"
            android:layout_marginBottom="-120dp"
            >
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="volg++"
                android:textSize="40dp"
                android:textColor="@color/colorPink">

            </TextView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/title"
                android:src="@mipmap/title1">
            </ImageView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:background="@drawable/shape1"
            android:layout_centerHorizontal="true"
            >
            <ImageView
                android:id="@+id/sym1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorPink"
                android:src="@mipmap/signin1"  />

            <EditText
                android:id="@+id/et1"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/sym1"
                android:background="#00FFFFFF"
                android:hint="@string/inputUsername"
                android:inputType="text" />
            <ImageView
                android:id="@+id/bt1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignRight="@+id/et1"
                android:src="@mipmap/delete"/>

            <Button
                android:id="@+id/button_check"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:layout_alignRight="@id/bt1"
                android:background="@drawable/shape2"
                android:text="@string/checkUsrname"
                android:textColor="@color/colorWhite"
                android:textSize="10dp"></Button>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape1"
            android:layout_centerHorizontal="true"
            >
            <ImageView
                android:id="@+id/sym2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorPink"
                android:src="@mipmap/phone"  />

            <EditText
                android:id="@+id/et2"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/sym2"
                android:background="#00FFFFFF"
                android:hint="@string/inputPhoneNumber"
                android:inputType="number"
                android:maxLength="11" />
            <ImageView
                android:id="@+id/bt2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorGrey"
                android:layout_alignRight="@+id/et2"
                android:src="@mipmap/delete"  />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape1"
            android:layout_alignLeft="@+id/account"
            android:layout_below="@+id/account">
            <ImageView
                android:id="@+id/sym3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorPink"
                android:src="@mipmap/signin2"  />

            <EditText
                android:id="@+id/et3"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/sym3"
                android:background="#00FFFFFF"
                android:hint="@string/inputPasswd"
                android:inputType="textPassword" />
            <ImageView
                android:id="@+id/bt3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorGrey"
                android:layout_alignRight="@+id/et3"
                android:src="@mipmap/delete" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_alignLeft="@+id/account"
            android:background="@drawable/shape1"
            android:layout_below="@+id/password">

            <EditText
                android:id="@+id/et5"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/sym5"
                android:background="#00FFFFFF"
                android:hint="@string/inputPasswd2"
                android:inputType="textPassword" />
            <ImageView
                android:id="@+id/sym5"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorPink"
                android:src="@mipmap/signin2" />
            <ImageView
                android:id="@+id/bt5"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorGrey"
                android:layout_alignRight="@+id/et5"
                android:src="@mipmap/delete" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape1"
            android:layout_alignLeft="@+id/account"
            android:layout_below="@+id/confirmPassword">
            <ImageView
                android:id="@+id/sym4"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:tint="@color/colorPink"
                android:src="@mipmap/message"  />

            <EditText
                android:id="@+id/et4"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/sym4"
                android:background="#00FFFFFF"
                android:hint="@string/inputSmsCode"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_sendSmsCode"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:layout_alignRight="@id/et4"
                android:background="@drawable/shape2"
                android:text="@string/sendCode"
                android:textColor="@color/colorWhite"
                android:textSize="10dp"></Button>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/signin"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/password"
            android:background="@drawable/circle"
            android:layout_marginTop="150dp">

            <ImageButton
                android:id="@+id/button_register"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/signin3"
                android:scaleType="centerCrop"
                android:tint="@color/white"
                android:background="@color/backgroundlucency"
                android:gravity="center">

            </ImageButton>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signin"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in1">
                </TextView>
                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPink"
                    android:text="@string/sign_in2">

                </TextView>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>