<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_in2">
    <RelativeLayout
            android:id="@+id/main_part"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/background_signin">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_above="@+id/account"
                android:layout_marginBottom="-120dp"
                >
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="volg++"
                    android:textSize="40dp"
                    android:textColor="@color/colorPink">

                </TextView>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/title"
                    android:src="@mipmap/title1">
                </ImageView>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:background="@drawable/shape1"
                android:layout_centerHorizontal="true"
                >
                <ImageView
                    android:id="@+id/sym1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/phone"  />

                <EditText
                    android:id="@+id/et1"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/sym1"
                    android:background="#00FFFFFF"
                    android:hint="@string/signin2_usrname"
                    android:inputType="number"
                    android:maxLength="11" />
                <ImageView
                    android:id="@+id/bt1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignRight="@+id/et1"
                    android:src="@mipmap/delete"  />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="@drawable/shape1"
                android:layout_alignLeft="@+id/account"
                android:layout_below="@+id/account">
                <ImageView
                    android:id="@+id/sym2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/message"  />

                <EditText
                    android:id="@+id/et2"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="-2dp"
                    android:layout_toRightOf="@+id/sym2"
                    android:background="#00FFFFFF"
                    android:hint="@string/inputSmsCode"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/button_sendSmsCode"
                    android:layout_width="60dp"
                    android:layout_height="25dp"
                    android:layout_alignRight="@id/et2"
                    android:background="@drawable/shape2"
                    android:text="@string/sendCode"
                    android:textColor="@color/colorWhite"
                    android:textSize="10dp">

                </Button>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/verify"
                android:layout_alignParentRight="true">
                <TextView
                    android:id="@+id/passsignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPink"
                    android:text="@string/pass_signin">

                </TextView>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/signin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/verify"
                android:background="@drawable/circle"
                android:layout_marginTop="150dp">

                <Button
                    android:id="@+id/button_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/signin3"
                    android:gravity="center">

                </Button>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signin"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up1">
                    </TextView>
                    <TextView
                        android:id="@+id/signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPink"
                        android:text="@string/sign_up2">

                    </TextView>
                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>